--- a/sage_contentmine.org/assets/styles/common/_global.less
+++ b/sage_contentmine.org/assets/styles/common/_global.less
@@ -5,7 +5,7 @@
 @font-face {
 	font-family: open-sans-regular;
 	src: url('../fonts/OpenSans-Regular.ttf');
-	font-style: normal;
+	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
@@ -26,11 +26,16 @@
 	font-weight: normal;
 	font-style: italic;
 }
-
 @font-face {
 	font-family: open-sans-semibold;
 	src: url('../fonts/OpenSans-Semibold.ttf');
 	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: league-spartan-bold;
+	src: url('../fonts/leaguespartan-bold.ttf');
+	font-weight: bold;
 	font-style: normal;
 }
 
@@ -40,7 +45,6 @@
 
 body {
 	font-family: open-sans-regular, Arial, sans-serif;
-	background-color: @gray-lighter;
 }
 
 main.main {
@@ -53,14 +57,13 @@ body.archive.category main.main {
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: open-sans-regular, Arial, sans-serif;
+	font-family: open-sans-semibold, Arial, sans-serif;
 }
 
 h1, h2, h3 {
-	font-family:open-sans-semibold;
+	font-family: open-sans-bold;
     margin-bottom: 15px;
     margin-top: 30px;
-    text-shadow: 1px 1px #fff;
 }
 
 h1{
@@ -97,103 +100,11 @@ h4, h5, h6{
 	margin-left: 3px;
 	margin-right: 3px;
 }
-
-/* ==========================================================================
-	 Navigation
-	 ========================================================================== */
-
-.navbar-collapse {
-	background-color: @brand-secondary  !important;
-	margin-top: 25px;
-	background-image: -webkit-linear-gradient(top, @button-primary-dark, @button-primary-light); 
-	background-image: -moz-linear-gradient(top, @button-primary-dark, @button-primary-light);
-	background-image: -o-linear-gradient(top, @button-primary-dark, @button-primary-light); 
-	background-image: linear-gradient(top, @button-primary-dark, @button-primary-light);
-	ul > li > a:hover{
-		background-color: #000000;
-	}
-}
-.navbar-static-top {
-	border-width: 0;
-}
-ul#menu-primary-nagivation {
-	margin-left: 0px;
-}
-ul#menu-primary-navigation li,
-.navbar-header .navbar-brand {
-	font-weight: normal;
-	text-transform: uppercase;
-	font-size: 15px;
-	background-color: @brand-secondary;
-}
-ul.navbar-nav#menu-primary-navigation.nav > li > a {
-	padding: 9px 15px;
+a {
 	color: @primary-dark;
-	text-shadow: 0.05em 0.05em #000
 }
-ul.navbar-nav#menu-primary-navigation.nav > li.active > a{
-	background-color: @tab-dark;
-}
-.navbar-default ul.social-nav.navbar-nav > li > a {
-	font-size: 18px;
-	padding: 15px 10px;
-}
-.navbar-default ul.social-nav.navbar-nav > li > a:hover {
-	color: #000;
-}
-.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li.active a,
-.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li a:hover,
-.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li a:focus, {
-	background-color: #fff !important;
-	color: @brand-tertiary;
-	-webkit-transition: border-bottom 0.3s ease-in-out;
-	-moz-transition: border-bottom 0.3s ease-in-out;
-	-ms-transition: border-bottom 0.3s ease-in-out;
-	-o-transition: border-bottom 0.3s ease-in-out;
-	transition: border-bottom 0.3s ease-in-out;
-	outline: 0;
-}
-
-/* ==========================================================================
-	 Subnav
-	 ========================================================================== */
-
-.subnav.banner {
-	background-color: @primary-light;
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid @primary-light;
-	a {
-		color: @primary-light;
-		border-bottom: 5px solid @primary-light;
-		.active {
-			border-bottom: 5px solid @primary-light;
-		}  
-	}
-	nav li a:hover, 
-	nav li a.active {
-		background-color: red;
-	}
-	.nav.navbar-nav li a {
-		padding-bottom : 9px;
-	}
-	.dropdown-menu {
-		a, li.active a {
-			border-bottom : 0;
-			.active, &:hover {
-				border-bottom : 0;    
-			}
-		}
-		li a {
-			padding : .75em 1em;
-		}    
-		li.active a {
-			background-color: @gray-lighter;
-			color : #000;   
-			&:hover {
-				background-color: @primary-light;
-			}   
-		}
-	}
+a:hover {
+	color: @brand-primary;
 }
 
 /* ==========================================================================
@@ -201,25 +112,33 @@ ul.navbar-nav#menu-primary-navigation.nav > li.active > a{
 	 ========================================================================== */
 
 header {
-	border-bottom: 1px solid @gray-lighter;
 	.wrapper-header-first {
+		background-color: #ffffff;
+		min-height: 65px;
 		.header-first {
 			.navbar-header {
 				padding-left: 0px;
 				.navbar-brand {
-					color: @brand-primary;
-					font-weight: bold;
-					font-size: @font-size-h2;
+					width: 180px;
+					background: url("../images/logo-web.png") no-repeat scroll center center transparent;
+					background-size: contain;
+					background-color: #fff;
+					text-indent: -9999em;
+					margin-top: 7px;
+					border: solid 7px #fff;
 				}
 			}
 			.social {
-				height: 55px;
+				height: 65px;
 				font-size: 40px;
 				float: right;
 				padding-right: 0px;
 				.social-icons {
+					padding-top: 2px;
+					padding-bottom: 8px;
 					float:right;
 					a {
+						vertical-align: top;
 						margin-left: 5px;
 					}
 				}
@@ -227,7 +146,6 @@ header {
 		}
 	}
 	.wrapper-header-second {
-		background-color: #ffffff;
 		padding-top: 15px;
 		padding-bottom: 15px;
 		.header-second {
@@ -242,54 +160,71 @@ header {
 			}
 		}
 		.breadcrumbs {
-			margin-top: 7px;
 			padding-left: 0px;
+			padding-top: 20px;
 		}
 	}
 }
 
 /* ==========================================================================
-	 Footer
+	 Navigation
 	 ========================================================================== */
 
-footer {
-	background-color: @brand-secondary;
-	margin-top: 30px;
-	padding-bottom: 20px;
-	padding-top: 40px;
-	.footer-content {
-		padding: 0px;
+.navbar-toggle {
+	margin-left: 10px;
+	margin-top: 15px;
+	border-top-color: @primary-dark;
+}
+.navbar-collapse {
+	margin-top: 7px;
+	position: relative;
+	left: -17px;
+	background-image: -webkit-linear-gradient(top, @button-primary-dark, @button-primary-light); 
+	background-image: -moz-linear-gradient(top, @button-primary-dark, @button-primary-light);
+	background-image: -o-linear-gradient(top, @button-primary-dark, @button-primary-light); 
+	background-image: linear-gradient(top, @button-primary-dark, @button-primary-light);
+	ul > li > a:hover{
+		background-color: @secondary-light;
 	}
-	.footer-links {
-		margin-top: 20px;
-		padding-right: 0px;
-		.box-footer-links {
-			float:right;	
-		}
-	}
-	.fa-copyright {
-		font-size: 18px;
-	}
-	.footer-social {
-		font-size: @font-size-medium;
-		ul {
-			padding-left: 0px;
-			list-style: none;
-			.fa-envelope {
-				margin-right: 8px;
-			}
-			.fa-twitter {
-				margin-right: 8px;
-			}
-			.fa-github {
-				margin-right: 8px;
-			}
-		}
-		.back-to-top {
-			float:right;
-			margin-top: 100px;
-		}
-	}
+}
+.navbar-static-top {
+	border-width: 0;
+}
+ul#menu-primary-nagivation {
+	margin-left: 0px;
+}
+ul#menu-primary-navigation li,
+.navbar-header .navbar-brand {
+	font-weight: normal;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+ul.navbar-nav#menu-primary-navigation.nav > li > a {
+	font-family: open-sans-bold;
+	padding: 9px 15px;
+	color: @primary-dark;
+}
+ul.navbar-nav#menu-primary-navigation.nav > li.active > a{
+	background-color: @tab-dark;
+}
+.navbar-default ul.social-nav.navbar-nav > li > a {
+	font-size: 18px;
+	padding: 15px 10px;
+}
+.navbar-default ul.social-nav.navbar-nav > li > a:hover {
+	color: #000;
+}
+.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li.active a,
+.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li a:hover,
+.navbar-default ul#menu-primary-navigation.nav.navbar-nav > li a:focus, {
+	background-color: @secondary-light !important;
+	color: @brand-tertiary;
+	-webkit-transition: border-bottom 0.3s ease-in-out;
+	-moz-transition: border-bottom 0.3s ease-in-out;
+	-ms-transition: border-bottom 0.3s ease-in-out;
+	-o-transition: border-bottom 0.3s ease-in-out;
+	transition: border-bottom 0.3s ease-in-out;
+	outline: 0;
 }
 
 /* ==========================================================================
@@ -297,101 +232,357 @@ footer {
 	 ========================================================================== */
 
 .main {
+	background-color: @gray-background;
+	line-height: 155%;
+	.page-header {
+		margin-top: 10px;
+		h1 {
+			font-size: 30px;
+			margin-top: 0px;
+		}
+	}
+	.entry-meta {
+		color: @gray;
+		font-weight: bold;
+		font-size: @font-size-small;
+		margin-bottom: 10px;
+	}
+	.entry-content {
+		padding-right: 30px;
+	}
+	.sidebar-page,
+	.sidebar-single {
+		h2 {
+			i {
+				font-size: 1.25em;
+			}
+		}
+	}
 	footer {
 		margin: 0px;
-		padding-bottom: 40px;
+		padding-bottom: 100px;
 		background-color: transparent;
 	}
+}
+.wrapper-shariff {
+	padding-left: 0px;
+	.shariff {
+		margin-left: -5px;
+	}
+}
+.wrapper-printfriendly {
+	padding-left: 0px;
+	.printfriendly {
+		margin-left: 0px;
+	}
+}
+
+/* ==========================================================================
+	 Footer
+	 ========================================================================== */
+
+footer.content-info {
+	background-color: @secondary-light;
+	.footer-content {
+		padding-bottom: 50px;
+		padding-left: 0px;
+		padding-right: 0px;
+		h3 {
+			margin-top: 0px;
+		}
+		.footer-copyright {
+			margin-top: 30px;
+			.fa-copyright {
+				font-size: 18px;
+				margin-right: 8px;
+			}
+			.shuttleworth-logo {
+				width: 280px;
+			}
+			.copyright-content {
+				padding-top: 20px;
+			}
+		}
+		.footer-keep-in-touch {
+			margin-top: 30px;
+		}
+		.footer-site {
+			margin-top: 30px;
+		}
+		.footer-social {
+			margin-top: 30px;
+			ul {
+				float: right;
+				font-size: 24px;
+				padding-left: 0px;
+				list-style: none;
+				.fa-envelope {
+					margin-right: 8px;
+				}
+				.fa-twitter {
+					margin-right: 8px;
+				}
+				.fa-github {
+					margin-right: 8px;
+				}
+				.back-to-top {
+					font-size: @font-size-medium;
+					margin-top: 100px;
+				}
+			}
+		}
+	}
+}
+
+/* ==========================================================================
+	 Attachments
+	 ========================================================================== */
+
+.entry-content img,
+.comment-content img {
+	width: 97.5%;
+	height: auto;
 }
 
 /* ==========================================================================
 	 Landing Page
 	 ========================================================================== */
 
-.wrapper-content {
-	.home-jumbotron {
-		padding: 0px;
-		margin-top: 30px;
-		margin-bottom: 30px;
+.home-jumbotron {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	.jumbotron-content {
 		h2 {
 			color: @brand-secondary;
-			font-size: 41pt;
-			margin-top: 100px;
+			font-size: 30pt;
 			.typo-brand {
 				color: @brand-primary;
 			}
 		}
-		.image-brand {
-			padding: 0px;
-			img {
-				border: 2px solid @brand-primary;	
-				border-radius: 2px;
+		h3 {
+			margin-bottom: 30px;
+			font-family: open-sans-semibold;
+			font-size: 26pt;
+			.fa-long-arrow-right {
+				font-weight: bolder;
+				margin-left: 20px;
 			}
 		}
 	}
-	.home-description {
-		border: 5px solid @brand-secondary;
-		border-radius: 5px;
-		margin-top: 30px;
-		margin-bottom: 30px;
+	.image-brand {
 		padding: 0px;
-		.content {
-			padding: 20px;
-			.lead-in {
+		margin-top: 30px;
+		margin-bottom: 50px;
+		img {
+			border: 2px solid @brand-primary;	
+			border-radius: 5px;
+			height: 230px;
+			width: 230px;
+			;
+		}
+	}
+}
+.wrapper-featured {
+	background-color: @secondary-light;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	.home-featured {
+		.content-mine {
+			margin-top: 50px;
+			margin-bottom: 50px;
+			a {
+				h2 {
+					font-size: 24px;
+					font-family: open-sans-semibold;
+					padding: 15px;
+				}
+			}
+		}
+		.community {
+			margin-bottom: 50px;
+			.community-text {
 				font-size: @font-size-large;
+				font-family: open-sans-semibold;
 			}
-			.tag-line {
-				font-size: @font-size-h2;
-				color: @brand-primary;
-				font-weight: bold;
+					
+			h3 {
+				font-size: 24px;
+				margin-bottom: 5px;
+			}
+			a {
+				font-size: 96px;
 			}
 		}
-		.links {
-			padding: 20px;
-			.btn {
-				margin-bottom: 15px;
+		.events {
+			margin-bottom: 50px;
+			.events-text {
+				font-size: @font-size-large;	
+				font-family: open-sans-semibold;
+			}
+			h3 {
+				margin-bottom: 5px;
+				font-size: 24px;
+			}
+			a {
+				font-size: 96px;
 			}
 		}
 	}
-	.home-team {
-		border-radius: 5px;
-		margin-top: 30px;
-		margin-bottom: 30px;
-		padding: 20px;
-		background-color: @brand-secondary;
-		.home-team-images {
-			img {
-				margin-bottom: 15px;
+}
+.home-blog {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	h3 {
+		padding-bottom: 30px;
+	}
+	.preview-news {
+		margin-bottom: 50px;
+		.box-thumbnail {
+			.thumbnail {
+				height: 236px;
+				img {
+					margin: 0px auto;
+				}
 			}
 		}
-		.home-team-content {
-			font-size: @font-size-large;
+		.preview-news-content {
+			.entry-title {
+				margin-top: 20px;
+				margin-bottom: 20px;
+			}
 		}
-	}
-	.home-advisory-board {
-		margin-top: 30px;
-		margin-bottom: 30px;
-	}
-	.home-get-involved {
-		border: 5px solid @brand-primary;
-		border-radius: 5px;
-		margin-top: 30px;
-		margin-bottom: 30px;
-		padding: 20px;
-		h1 {
-			margin-top: 0px;
-		}
-	}
-	.home-blog {
-		margin-top: 30px;
-		margin-bottom: 30px;
-		padding: 0px;
 	}
 }
 
 /* ==========================================================================
-	 Blog
+	 Blog / Search
 	 ========================================================================== */
+
+.post-preview {
+	margin-bottom: 50px;
+	.preview-thumb {
+		margin-bottom: 20px;
+	}
+	.entry-content {
+		h2 {
+			margin-top: 0px;
+			margin-bottom: 15px;
+		}
+	}
+}
+
+/* ==========================================================================
+	 Contact Template
+	 ========================================================================== */
+
+.intro {
+	font-family: open-sans-semibold;
+	font-size: @font-size-large;
+	padding: 30px 0px;
+}
+.contact-nav {
+	margin-top: 30px;
+	li {
+		padding-bottom: .25em;
+		a { 
+			background-color: #efefef;
+			border: 1px solid @brand-primary;
+		}
+		a:hover {
+			color: #000;
+			background-color: #FAFAFA;
+		}
+		i {
+			font-size: 1.25em;
+			margin-right: .25em;
+		}
+	}
+}
+.icon-heading {
+	color: @gray-dark;
+	margin-bottom: 1em;
+	padding-bottom: .25em;
+	i {
+		font-size: @font-size-large;
+		margin-right: .25em;
+	}
+}
+.google-twitter {
+	margin-top: 30px;
+	.section-intro {
+		margin-bottom: 2em;
+	}
+	.twitter-feed {
+		.entry-meta {
+			font-size: .8em;
+			display: block;
+			.from-meta {
+				display: none;
+			}
+			a {
+				color: #A3A3A3;
+			}
+		}
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			li {
+				margin-bottom: 2em;
+				font-size: 1em;
+			}
+		}
+	}
+}
+.contact-us {
+	.contact-heading:hover {
+		text-decoration: none;
+	}
+	#contact-us-form {
+		.wpcf7-form-control {
+			width:100%;
+		}
+		.wpcf7-select {
+			height: 30px;
+		}
+		.wpcf7-submit {
+			height: 50px;
+		}
+		.wpcf7-textarea {
+		}
+		.wpcf7-text {
+		}
+	}
+}
+.report-problem {
+	.contact-link {
+		li {
+			padding-bottom: .25em;
+			text-transform: none;
+			a {
+				border: 1px solid @brand-primary;
+			}
+		}
+		i {
+			font-size: 1.25em;
+			margin-right: .25em;
+		}
+		.nav {
+			li {
+				a {
+					background-color: #efefef;
+				}
+				a:hover {
+					color: #000;
+					background-color: #FAFAFA;
+				}
+			}
+		}
+	}
+}
+
 
 /* ==========================================================================
 	 Single Event
@@ -418,54 +609,95 @@ footer {
 	 Template Events
 	 ========================================================================== */
 
-.preview-content {
-	height: 216px;
+.subscribe-events {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+.preview-event {
+	margin-bottom: 50px;
+	.preview-event-content {
+		font-size: @font-size-medium;
+		h3 {
+			font-size: @font-size-large;
+			margin-top: 0px;
+		}
+		.fa-calendar {
+			margin-right: 8px;
+		}
+		.fa-map-marker {
+			margin-right: 9px;
+		}
+		.fa-info {
+			margin-right: 16px;
+		}
+		.preview-event {
+			margin-top:15px;
+		}
+		.preview-event-excerpt {
+			margin-top: 15px;
+			margin-bottom: 50px;
+		}
+	}
+}
+.more-past-events {
+	margin-bottom: 30px;
+}
+.event-map {
+	margin-bottom: 30px;
+}
+.fc-header-title h2 {
+	font-family: open-sans-bold;
 	font-size: @font-size-medium;
-	h3 {
-		font-size: @font-size-large;
-		margin-top: 0px;
-	}
-	.fa-calendar {
-		margin-right: 8px;
-	}
-	.fa-map-marker {
-		margin-right: 9px;
-	}
-	.fa-info {
-		margin-right: 16px;
-	}
-	.preview-event {
-		margin-top:15px;
-	}
-}
-
-
-/* ==========================================================================
-	 Contact Template
-	 ========================================================================== */
-
-
-#contact-form {
-	.wpcf7-form-control {
-		width:100%;
-	}
-	.wpcf7-select {
-		height: 30px;
-	}
-	.wpcf7-submit {
-		height: 50px;
-	}
-	.wpcf7-textarea {
-	}
-	.wpcf7-text {
-	}
 }
 
 /* ==========================================================================
-	 MISC
+	 Media
 	 ========================================================================== */
 
-.printfriendly {
-	margin: 0px;
+@media (min-width: @screen-sm-min) {
+  .navbar .container .navbar-brand {
+    margin-left : 0 !important;
+    margin-top : 5px;
+  }
 }
+@media (min-width: @screen-md-min) {
+	.wrapper-featured {
+		.home-featured {
+			.content-mine {
+				a {
+					h2 {
+						font-size: 32px;
+						font-family: open-sans-semibold;
+						padding: 30px;
+					}
+				}
+			}
+		}
+	}
+	header {
+		.wrapper-header-first {
+			.header-first {
+				.navbar-header {
+				  .navbar-brand {
+					    width: 360px;
+					}
+				}
+			}
+		}
+		.wrapper-header-second {
+			.breadcrumbs {
+				padding-top: 8px;
+			}
+		}
+	}
+}
+@media (min-width: @screen-lg-min) {
+	.navbar-collapse {
+		margin-top: 34px;
+		position: relative;
+		left: 25px;
+		margin-left: 25px;
+	}
+}
+
 
